# minhook_cpp

./: CMakeLists.txt  include.pm5  link.pm5  premake5.lua  project.pm5
include/: minhook.hpp
src/: minhook.cpp
